# osc2wss

./: Cargo.toml  README.md  config.toml
certs/: cert.pem  key.pem  priv_key_rsa.pem
src/: config.rs  main.rs  types.rs
