[package]
name = "osc2wss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"]}
warp = {version="*", features = ["tls"]}
futures = "*"
local-ip-address = "0.5.3"
rcgen = "0.11.1"
openssl = {version = "0.10.55"}
toml = "0.7.6"
serde = {version = "*", features = ["derive"]}
async-osc = "0.2.0"
serde_json = "1.0.103"
